# todo-app-in-rust

./: .gitignore
backend/: .env  Cargo.toml
backend/src/: db.rs  main.rs  models.rs
frontend/: api.ts  package.json  types.ts
frontend/app/: layout.tsx  page.tsx
frontend/styles/: global.css
