[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
binary = "0.0.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
futures-util = "0.3.31"
mongodb = "3.2.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.14.0"
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
